<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_label_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/breed"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_breed" />

    <TextView
        android:id="@+id/tv_label_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/origin"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_country" />

    <TextView
        android:id="@+id/tv_label_coat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/coat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_origin" />

    <TextView
        android:id="@+id/tv_label_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pattern"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_coat" />

    <TextView
        android:id="@+id/breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_breed"
        app:layout_constraintStart_toEndOf="@+id/tv_label_breed"
        app:layout_constraintTop_toTopOf="@+id/tv_label_breed" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_country"
        app:layout_constraintStart_toEndOf="@+id/tv_label_country"
        app:layout_constraintTop_toTopOf="@+id/tv_label_country" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_origin"
        app:layout_constraintStart_toEndOf="@+id/tv_label_origin"
        app:layout_constraintTop_toTopOf="@+id/tv_label_origin" />

    <TextView
        android:id="@+id/coat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_coat"
        app:layout_constraintStart_toEndOf="@+id/tv_label_coat"
        app:layout_constraintTop_toTopOf="@+id/tv_label_coat" />

    <TextView
        android:id="@+id/pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_pattern"
        app:layout_constraintStart_toEndOf="@+id/tv_label_pattern"
        app:layout_constraintTop_toTopOf="@+id/tv_label_pattern" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pattern" />

</android.support.constraint.ConstraintLayout>